Temporary fix to page alignment

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -17,7 +17,7 @@ body {
   font-size: 16px;
   height: 100%;
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
 }
 .navbar {
   margin-bottom: 0;
@@ -31,6 +31,12 @@ body {
 }
 #sidebar-left {
   width: 100px;
-  height: 94vh;
+  height: 100vh;
   background-color: #d6d6d6;
+  display: inline-flex;
+}
+#content {
+  display: inline-flex;
+  width: 90vw;
+  height: 100vh;
 }
